[package]
name = "yopts"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
atty = "0.2.14"
clap = { version = "4.5.21", features = ["derive", "string"] }
env_logger = "0.11.5"
log = "0.4.22"
once_cell = "1.20.2"
regex = "1.11.1"
shlex = "1.3.0"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.3"
yaml-rust = "0.4.5"
